# pdns-cli

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/app_config/: cmd_line_parser.rs  errors.rs  mod.rs
src/commands/: add_entry_command.rs  add_zone_command.rs  command_handler.rs  list_zones_command.rs  mod.rs  query_zone_command.rs  remove_entry_command.rs  remove_zone_command.rs
src/pdns/: common.rs  error.rs  mod.rs  server.rs  struct_type.rs  zone.rs
src/rest_client/: client_request_builder.rs  errors.rs  lifecycle.rs  mod.rs  pdns_resource_client.rs  server_resource_client.rs  zone_resource_client.rs
stack-files/pdns/: webserver.conf
