[package]
name = "pdns-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
log = { version = "0.4.14", features = ["std"] }
log-mdc = { version = "0.1.0", optional = true }
log4rs = "1.0.0"
serde = "1.0.130"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
yaml-rust = "0.4.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.generate-rpm]
[[package.metadata.generate-rpm.assets]]
source = "target/release/pdns-cli"
dest = "/usr/sbin/pdns-cli"
mode = "0755"
