[package]
name = "pdns-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
fancy-regex = "0.7.1"
log = { version = "0.4.14", features = ["std"] }
log-mdc = { version = "0.1.0", optional = true }
log4rs = "1.0.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
uriparse = "0.6.3"
yaml-rust = "0.4.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.generate-rpm]
[[package.metadata.generate-rpm.assets]]
source = "target/release/pdns-cli"
dest = "/usr/sbin/pdns-cli"
mode = "0755"
